2006-01-15  Crispin Flowerday  <gnome@flowerday.cx>

	* data/chrome/Makefile.am:
	* data/chrome/about.xhtml:
	* data/chrome/brand.dtd.in:
	* data/chrome/brand.properties.in:
	* data/chrome/epiphany.manifest.in:

	Override the page that is shown for the about: url so
	that it doesn't say "Deer Park"

2006-01-14  Chrhristian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/Makefile.am:
	* embed/mozilla/mozilla-embed-single.cpp:

	Only use the directory service provider on gecko 1.8;
	gecko 1.7 uses a different method to register chrome.

2006-01-14  Crispin Flowerday  <gnome@flowerday.cx>

	* embed/mozilla/mozilla-embed-single.cpp (init_services): 

	Simplify creation and reference counting of the
	EphyDirectoryProvider class.

2006-01-14  Christian Persch  <chpe@cvs.gnome.org>

	* m4/gecko.m4:
	
	Add defines and automake conditional for toolkit flavour.

	* configure.ac:
	* data/Makefile.am:
	A data/chrome/.cvsignore:
	A data/chrome/Makefile.am:
	A data/chrome/brand.dtd.in:
	A data/chrome/brand.properties.in:
	A data/chrome/epiphany.manifest.in:
	
	Provide branding so mozilla dialogues don't show "Deer Park" or
	"Firefox" but "Epiphany" instead.

	* embed/mozilla/Makefile.am:
	A embed/mozilla/EphyDirectoryProvider.cpp:
	A embed/mozilla/EphyDirectoryProvider.h:
	* embed/mozilla/mozilla-embed-single.cpp:

	Add a directory service provider.

2006-01-13  Christian Persch  <chpe@cvs.gnome.org>

	* lib/ephy-stock-icons.c:
	* lib/ephy-stock-icons.h:

	Remove obsolete close-tab stock icon.

2006-01-13  Christian Persch  <chpe@cvs.gnome.org>

        * data/ui/epiphany-toolbar.xml:
	* src/ephy-window.c:

	Fix zoom buttons order on default toolbar. Set short-label
	property for zoom actions.

2006-01-13  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/EventContext.cpp:

	Don't require a HTML document to activate typeaheadfind.
	Bug #326813.

2006-01-13  Christian Persch  <chpe@cvs.gnome.org>

	A embed/mozilla/EphyPromptService.cpp:
	A embed/mozilla/EphyPromptService.h: