@@ -66,6 +66,10 @@ struct _EphyAdBlockIface
 	gboolean	(* should_load)	(EphyAdBlock *adblock,
 				         const char *url,
 				         AdUriCheckType check_type);
+	
+	void		(* edit_rule)	(EphyAdBlock *adblock,
+				         const char *url,
+				         gboolean allowed);
 };
 
 GType		ephy_adblock_get_type		(void);
@@ -73,6 +77,10 @@ GType		ephy_adblock_get_type		(void);
 gboolean	ephy_adblock_should_load 	(EphyAdBlock *adblock,
 				    	 	 const char *url,
 				    	 	 AdUriCheckType check_type);
+
+void		ephy_adblock_edit_rule	 	(EphyAdBlock *adblock,
+				    	 	 const char *url,
+				    	 	 gboolean allowed);
 
 G_END_DECLS
 
